Fixed form heading alignment

--- a/src/signuplogin.css
+++ b/src/signuplogin.css
@@ -2,6 +2,8 @@
   margin-bottom: 2rem;
   color: rgb(88, 88, 88);
   text-align: center;
+  width: 27rem;
+
 }
 
 .signupForm,
